--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -60,4 +60,4 @@ header:
       # @start locale config
       en      : &EN       Team
       # @end locale config
-    url: /archive.html
+    url: /team.html
