--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@ highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "t
 url     : # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
 title   : SPADE
-description: > # this means to ignore newlines until "Language & timezone"
-  SPADE applies geospatial data to analyze, predict and prevent heavy rain impacts and flood damages.
-
+description: SPADE applies geospatial data to analyze, predict and prevent heavy rain impacts and flood damages. # this means to ignore newlines until "Language & timezone"
 
 ## => Language and Timezone
 ##############################
